--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendupdatedata.yml
@@ -35,7 +35,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#height:member'
     summary: |-
-      表示图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -50,7 +50,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#left:member'
     summary: |-
-      代表图表图例的左侧（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -65,7 +65,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#overlay:member'
     summary: |-
-      表示图表图例是否应该与图表的主体重叠的布尔值。
+      指定图表图例是否应与图表的主体重叠。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
@@ -80,7 +80,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#position:member'
     summary: |-
-      表示图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -95,7 +95,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendUpdateData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#showShadow:member'
     summary: |-
-      表示图例在图表上是否有阴影。
+      指定图例在图表上是否有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -110,7 +110,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#top:member'
     summary: |-
-      表示图表图例顶部。
+      指定图表图例的顶端。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -125,7 +125,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#visible:member'
     summary: |-
-      表示 ChartLegend 对象是否可见的布尔值。
+      指定 ChartLegend 是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -140,7 +140,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#width:member'
     summary: |-
-      表示图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
+      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
