--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdatalabelsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdatalabelsloadoptions.yml
@@ -41,7 +41,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#autoText:member'
     summary: |-
-      表示数据标签是否根据上下文自动生成相应的文本。
+      指定数据标签是否根据上下文自动生成相应的文本。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
@@ -56,7 +56,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#format:member'
     summary: |-
-      表示图表数据标签的格式，包括填充和字体格式。
+      指定图表数据标签的格式，其中包括填充和字体格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -71,7 +71,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#horizontalAlignment:member'
     summary: |-
-      表示图表数据标签水平对齐。 有关详细信息，请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的数据标签为0时，此属性才有效。
+      指定图表数据标签的水平对齐方式。 有关详细信息，请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的数据标签为0时，此属性才有效。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
@@ -86,7 +86,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#numberFormat:member'
     summary: |-
-      表示数据标签的格式代码。
+      指定数据标签的格式代码。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
@@ -131,7 +131,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showBubbleSize:member'
     summary: |-
-      该布尔值表示数据标签气泡大小是否可见。
+      指定数据标签气泡大小是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBubbleSize
@@ -146,7 +146,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showCategoryName:member'
     summary: |-
-      表示数据标签分类名称是否可见的布尔值。
+      指定数据标签类别名称是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showCategoryName
@@ -161,7 +161,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showLegendKey:member'
     summary: |-
-      该布尔值表示数据标签图例标示是否可见。
+      指定数据标签图例标示是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendKey
@@ -176,7 +176,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showPercentage:member'
     summary: |-
-      该布尔值表示数据标签百分比是否可见。
+      指定数据标签百分比是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPercentage
@@ -191,7 +191,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showSeriesName:member'
     summary: |-
-      该布尔值表示数据标签系列名称是否可见。
+      指定数据标签系列名称是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showSeriesName
@@ -206,7 +206,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showValue:member'
     summary: |-
-      该布尔值表示数据标签值是否可见。
+      指定数据标签值是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValue
