--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.databarconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.databarconditionalformatupdatedata.yml
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.DataBarConditionalFormatUpdateData#upperBoundRule:member'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatUpdateData#axisColor:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisColor
@@ -49,7 +49,7 @@ items:
           - 'excel!Excel.Interfaces.DataBarConditionalFormatUpdateData#axisFormat~0:complex'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatUpdateData#barDirection:member'
     summary: |-
-      表示数据条图形应基于的方向。
+      指定数据条图形的基于方向。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: barDirection
