commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartpointformat.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartpointformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartPointFormat:class'
     summary: |-
-      <span data-ttu-id="29c03-101">表示图表点的格式化对象。</span><span class="sxs-lookup"><span data-stu-id="29c03-101">Represents formatting object for chart points.</span></span>
+      表示图表点的格式化对象。
 
-      <span data-ttu-id="29c03-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29c03-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartPointFormat
     fullName: Excel.ChartPointFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPointFormat#border:member'
@@ -25,9 +25,9 @@ items:
       - 'excel!Excel.ChartPointFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartPointFormat#border:member'
     summary: |-
-      <span data-ttu-id="29c03-103">表示图表数据点的边框格式，包括颜色、样式和权重信息。</span><span class="sxs-lookup"><span data-stu-id="29c03-103">Represents the border format of a chart data point, which includes color, style, and weight information.</span></span> <span data-ttu-id="29c03-104">只读。</span><span class="sxs-lookup"><span data-stu-id="29c03-104">Read-only.</span></span>
+      表示图表数据点的边框格式，包括颜色、样式和权重信息。
 
-      <span data-ttu-id="29c03-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29c03-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -39,7 +39,7 @@ items:
         type:
           - 'excel!Excel.ChartBorder:class'
   - uid: 'excel!Excel.ChartPointFormat#context:member'
-    summary: <span data-ttu-id="29c03-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="29c03-106">The request context associated with the object.</span></span> <span data-ttu-id="29c03-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="29c03-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPointFormat#fill:member'
     summary: |-
-      <span data-ttu-id="29c03-108">代表图表的填充格式，其中包括背景格式信息。</span><span class="sxs-lookup"><span data-stu-id="29c03-108">Represents the fill format of a chart, which includes background formatting information.</span></span> <span data-ttu-id="29c03-109">只读。</span><span class="sxs-lookup"><span data-stu-id="29c03-109">Read-only.</span></span>
+      代表图表的填充格式，其中包括背景格式信息。
 
-      <span data-ttu-id="29c03-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29c03-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -66,7 +66,7 @@ items:
         type:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartPointFormat#load:member(1)'
-    summary: <span data-ttu-id="29c03-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="29c03-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="29c03-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -80,11 +80,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="29c03-113">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="29c03-113">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartPointFormatLoadOptions:interface'
   - uid: 'excel!Excel.ChartPointFormat#load:member(2)'
-    summary: <span data-ttu-id="29c03-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="29c03-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="29c03-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -98,11 +98,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="29c03-116">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartPointFormat#load:member(3)'
-    summary: <span data-ttu-id="29c03-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="29c03-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="29c03-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -120,7 +120,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="29c03-119">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-119">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -128,9 +128,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ChartPointFormat#set:member(1)'
-    summary: '<span data-ttu-id="29c03-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="29c03-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="29c03-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="29c03-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="29c03-122">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartPointFormat): void`
     name: 'set(properties, options)'
@@ -146,15 +146,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="29c03-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="29c03-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="29c03-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPointFormat#set:member(2)'
-    summary: '<span data-ttu-id="29c03-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="29c03-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -172,7 +172,7 @@ items:
           type:
             - 'excel!Excel.ChartPointFormat:class'
   - uid: 'excel!Excel.ChartPointFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="29c03-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="29c03-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="29c03-127">.</span><span class="sxs-lookup"><span data-stu-id="29c03-127"></span></span> <span data-ttu-id="29c03-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="29c03-128"></span></span><!-- --><span data-ttu-id="29c03-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPointFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPointFormatData`</span><span class="sxs-lookup"><span data-stu-id="29c03-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartPointFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartPointFormatData`</span></span><!-- --><span data-ttu-id="29c03-130">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="29c03-130">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPointFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPointFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -185,7 +185,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPointFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -199,7 +199,7 @@ references:
     name: Excel.Interfaces.ChartPointFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
     name: Interfaces.ChartPointFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartPointFormatData:interface'
     name: Excel.Interfaces.ChartPointFormatData
