--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
-    summary: '<span data-ttu-id="a8166-101">一个用于更新 ChartLegend 对象上的数据的接口，可用于`chartLegend.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="a8166-101">An interface for updating data on the ChartLegend object, for use in `chartLegend.set({ ... })`</span></span><!-- --><span data-ttu-id="a8166-102">.</span><span class="sxs-lookup"><span data-stu-id="a8166-102"></span></span>'
+    summary: '一个用于更新 ChartLegend 对象上的数据的接口，可用于`chartLegend.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartLegendUpdateData
     fullName: Excel.Interfaces.ChartLegendUpdateData
     langs:
@@ -20,9 +20,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="a8166-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="a8166-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
+      表示图表图例的格式，包括填充和字体格式。
 
-      <span data-ttu-id="a8166-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -35,9 +35,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#height:member'
     summary: |-
-      <span data-ttu-id="a8166-105">表示图表上的图例的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="a8166-105">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="a8166-106">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="a8166-106">Null if legend is not visible.</span></span>
+      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="a8166-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -50,9 +50,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="a8166-108">代表图表图例的左侧（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="a8166-108">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="a8166-109">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="a8166-109">Null if legend is not visible.</span></span>
+      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="a8166-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -65,9 +65,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#overlay:member'
     summary: |-
-      <span data-ttu-id="a8166-111">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="a8166-111">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      指定图表图例是否应与图表的主体重叠。
 
-      <span data-ttu-id="a8166-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -80,9 +80,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="a8166-113">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="a8166-113">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="a8166-114">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="a8166-114">See Excel.ChartLegendPosition for details.</span></span>
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
-      <span data-ttu-id="a8166-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -95,9 +95,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendUpdateData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#showShadow:member'
     summary: |-
-      <span data-ttu-id="a8166-116">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="a8166-116">Represents if the legend has a shadow on the chart.</span></span>
+      指定图例在图表上是否有阴影。
 
-      <span data-ttu-id="a8166-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
     fullName: showShadow
     langs:
@@ -110,9 +110,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="a8166-118">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="a8166-118">Represents the top of a chart legend.</span></span>
+      指定图表图例的顶端。
 
-      <span data-ttu-id="a8166-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -125,9 +125,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="a8166-120">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="a8166-120">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      指定 ChartLegend 是否可见。
 
-      <span data-ttu-id="a8166-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -140,9 +140,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="a8166-122">表示图表上的图例的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="a8166-122">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="a8166-123">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="a8166-123">Null if legend is not visible.</span></span>
+      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="a8166-124">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8166-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
