--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.custompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.custompropertycollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="bb8c2-101">包含 customProperty 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="bb8c2-101">Contains the collection of customProperty objects.</span></span>
+      包含 customProperty 对象的集合。
 
-      <span data-ttu-id="bb8c2-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb8c2-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.CustomPropertyCollectionLoadOptions
     fullName: Excel.Interfaces.CustomPropertyCollectionLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
       - 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="bb8c2-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="bb8c2-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="bb8c2-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="bb8c2-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="bb8c2-105">).</span><span class="sxs-lookup"><span data-stu-id="bb8c2-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#key:member'
     summary: |-
-      <span data-ttu-id="bb8c2-106">对于集合中的每一项：获取自定义属性的键。</span><span class="sxs-lookup"><span data-stu-id="bb8c2-106">For EACH ITEM in the collection: Gets the key of the custom property.</span></span> <span data-ttu-id="bb8c2-107">只读。</span><span class="sxs-lookup"><span data-stu-id="bb8c2-107">Read only.</span></span>
+      对于集合中的每一项：自定义属性的键。
 
-      <span data-ttu-id="bb8c2-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb8c2-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
     fullName: key
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="bb8c2-109">对于集合中的每一项：获取自定义属性的值类型。</span><span class="sxs-lookup"><span data-stu-id="bb8c2-109">For EACH ITEM in the collection: Gets the value type of the custom property.</span></span> <span data-ttu-id="bb8c2-110">只读。</span><span class="sxs-lookup"><span data-stu-id="bb8c2-110">Read only.</span></span>
+      对于集合中的每一项：用于自定义属性的值的类型。
 
-      <span data-ttu-id="bb8c2-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb8c2-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="bb8c2-112">对于集合中的每一项：获取或设置自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="bb8c2-112">For EACH ITEM in the collection: Gets or sets the value of the custom property.</span></span>
+      对于集合中的每一项：自定义属性的值。
 
-      <span data-ttu-id="bb8c2-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb8c2-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
