--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartbinoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartbinoptions.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartBinOptions:class'
     summary: |-
-      <span data-ttu-id="5142f-101">封装直方图和排列图的容器选项。</span><span class="sxs-lookup"><span data-stu-id="5142f-101">Encapsulates the bin options for histogram charts and pareto charts.</span></span>
+      封装直方图和排列图的容器选项。
 
-      <span data-ttu-id="5142f-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartBinOptions
     fullName: Excel.ChartBinOptions
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartBinOptions#allowOverflow:member'
@@ -30,9 +30,9 @@ items:
       - 'excel!Excel.ChartBinOptions#width:member'
   - uid: 'excel!Excel.ChartBinOptions#allowOverflow:member'
     summary: |-
-      <span data-ttu-id="5142f-103">指定是否在直方图或排列图中启用容器溢出。</span><span class="sxs-lookup"><span data-stu-id="5142f-103">Specifies whether or not the bin overflow is enabled in a histogram chart or pareto chart.</span></span> <span data-ttu-id="5142f-104">读/写。</span><span class="sxs-lookup"><span data-stu-id="5142f-104">Read/Write.</span></span>
+      指定直方图图表或排列图表中是否启用了 "bin 溢出"。
 
-      <span data-ttu-id="5142f-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowOverflow
     fullName: allowOverflow
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartBinOptions#allowUnderflow:member'
     summary: |-
-      <span data-ttu-id="5142f-106">指定是否在直方图或排列图中启用容器下溢。</span><span class="sxs-lookup"><span data-stu-id="5142f-106">Specifies whether or not the bin underflow is enabled in a histogram chart or pareto chart.</span></span> <span data-ttu-id="5142f-107">读/写。</span><span class="sxs-lookup"><span data-stu-id="5142f-107">Read/Write.</span></span>
+      指定直方图图表或排列图表中是否启用了 bin 下溢。
 
-      <span data-ttu-id="5142f-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowUnderflow
     fullName: allowUnderflow
     langs:
@@ -59,7 +59,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ChartBinOptions#context:member'
-    summary: <span data-ttu-id="5142f-109">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="5142f-109">The request context associated with the object.</span></span> <span data-ttu-id="5142f-110">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="5142f-110">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -72,9 +72,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartBinOptions#count:member'
     summary: |-
-      <span data-ttu-id="5142f-111">返回或设置直方图或排列图的容器数量。</span><span class="sxs-lookup"><span data-stu-id="5142f-111">Returns or sets the bin count of a histogram chart or pareto chart.</span></span> <span data-ttu-id="5142f-112">读/写。</span><span class="sxs-lookup"><span data-stu-id="5142f-112">Read/Write.</span></span>
+      指定直方图图表或排列图表的分类数。
 
-      <span data-ttu-id="5142f-113">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -86,7 +86,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.ChartBinOptions#load:member(1)'
-    summary: <span data-ttu-id="5142f-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5142f-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5142f-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -100,11 +100,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="5142f-116">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="5142f-116">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions:interface'
   - uid: 'excel!Excel.ChartBinOptions#load:member(2)'
-    summary: <span data-ttu-id="5142f-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5142f-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5142f-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -118,11 +118,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="5142f-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartBinOptions#load:member(3)'
-    summary: <span data-ttu-id="5142f-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5142f-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5142f-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -140,7 +140,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="5142f-122">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-122">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -149,9 +149,9 @@ items:
                       }
   - uid: 'excel!Excel.ChartBinOptions#overflowValue:member'
     summary: |-
-      <span data-ttu-id="5142f-123">返回或设置直方图或排列图的容器溢出值。</span><span class="sxs-lookup"><span data-stu-id="5142f-123">Returns or sets the bin overflow value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="5142f-124">读/写。</span><span class="sxs-lookup"><span data-stu-id="5142f-124">Read/Write.</span></span>
+      指定直方图图表或排列图表的 "bin 溢出" 值。
 
-      <span data-ttu-id="5142f-125">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-125">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overflowValue
     fullName: overflowValue
     langs:
@@ -163,9 +163,9 @@ items:
         type:
           - number
   - uid: 'excel!Excel.ChartBinOptions#set:member(1)'
-    summary: '<span data-ttu-id="5142f-126">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-126">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="5142f-127">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="5142f-127">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="5142f-128">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="5142f-128">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartBinOptions): void`
     name: 'set(properties, options)'
@@ -181,15 +181,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="5142f-129">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-129">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartBinOptionsUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="5142f-130">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="5142f-130">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartBinOptions#set:member(2)'
-    summary: '<span data-ttu-id="5142f-131">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="5142f-131">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -207,7 +207,7 @@ items:
           type:
             - 'excel!Excel.ChartBinOptions:class'
   - uid: 'excel!Excel.ChartBinOptions#toJSON:member(1)'
-    summary: '<span data-ttu-id="5142f-132">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="5142f-132">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="5142f-133">.</span><span class="sxs-lookup"><span data-stu-id="5142f-133"></span></span> <span data-ttu-id="5142f-134">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="5142f-134"></span></span><!-- --><span data-ttu-id="5142f-135">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBinOptions 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBinOptionsData`</span><span class="sxs-lookup"><span data-stu-id="5142f-135">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartBinOptions object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartBinOptionsData`</span></span><!-- --><span data-ttu-id="5142f-136">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="5142f-136">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBinOptions 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBinOptionsData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -221,9 +221,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartBinOptions#type:member'
     summary: |-
-      <span data-ttu-id="5142f-137">返回或设置直方图或排列图的容器类型。</span><span class="sxs-lookup"><span data-stu-id="5142f-137">Returns or sets the bin's type for a histogram chart or pareto chart.</span></span> <span data-ttu-id="5142f-138">读/写。</span><span class="sxs-lookup"><span data-stu-id="5142f-138">Read/Write.</span></span>
+      指定用于直方图图表或排列图表的 bin 类型。
 
-      <span data-ttu-id="5142f-139">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-139">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -236,9 +236,9 @@ items:
           - 'excel!Excel.ChartBinOptions#type~0:complex'
   - uid: 'excel!Excel.ChartBinOptions#underflowValue:member'
     summary: |-
-      <span data-ttu-id="5142f-140">返回或设置直方图或排列图的容器下溢值。</span><span class="sxs-lookup"><span data-stu-id="5142f-140">Returns or sets the bin underflow value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="5142f-141">读/写。</span><span class="sxs-lookup"><span data-stu-id="5142f-141">Read/Write.</span></span>
+      指定直方图图表或排列图表的 bin 下溢值。
 
-      <span data-ttu-id="5142f-142">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-142">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underflowValue
     fullName: underflowValue
     langs:
@@ -251,9 +251,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartBinOptions#width:member'
     summary: |-
-      <span data-ttu-id="5142f-143">返回或设置直方图或排列图的容器宽度值。</span><span class="sxs-lookup"><span data-stu-id="5142f-143">Returns or sets the bin width value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="5142f-144">读/写。</span><span class="sxs-lookup"><span data-stu-id="5142f-144">Read/Write.</span></span>
+      指定直方图图表或排列图表的纸盒宽度值。
 
-      <span data-ttu-id="5142f-145">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5142f-145">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -265,7 +265,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -275,7 +275,7 @@ references:
     name: Excel.Interfaces.ChartBinOptionsLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData:interface'
     name: Interfaces.ChartBinOptionsUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData:interface'
     name: Excel.Interfaces.ChartBinOptionsData
