--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpointdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpointdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
-    summary: <span data-ttu-id="db575-101">描述通过调用返回的数据的接口`chartPoint.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="db575-101">An interface describing the data returned by calling `chartPoint.toJSON()`</span></span><!-- --><span data-ttu-id="db575-102">.</span><span class="sxs-lookup"><span data-stu-id="db575-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartPoint.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartPointData
     fullName: Excel.Interfaces.ChartPointData
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.Interfaces.ChartPointData#value:member'
   - uid: 'excel!Excel.Interfaces.ChartPointData#dataLabel:member'
     summary: |-
-      <span data-ttu-id="db575-103">返回图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="db575-103">Returns the data label of a chart point.</span></span> <span data-ttu-id="db575-104">只读。</span><span class="sxs-lookup"><span data-stu-id="db575-104">Read-only.</span></span>
+      返回图表点的数据标签。
 
-      <span data-ttu-id="db575-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabel
     fullName: dataLabel
     langs:
@@ -34,9 +34,9 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelData:interface'
   - uid: 'excel!Excel.Interfaces.ChartPointData#format:member'
     summary: |-
-      <span data-ttu-id="db575-106">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="db575-106">Encapsulates the format properties chart point.</span></span> <span data-ttu-id="db575-107">只读。</span><span class="sxs-lookup"><span data-stu-id="db575-107">Read-only.</span></span>
+      封装图表点的格式属性。
 
-      <span data-ttu-id="db575-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -49,9 +49,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPointFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartPointData#hasDataLabel:member'
     summary: |-
-      <span data-ttu-id="db575-109">表示数据点是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="db575-109">Represents whether a data point has a data label.</span></span> <span data-ttu-id="db575-110">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="db575-110">Not applicable for surface charts.</span></span>
+      表示数据点是否具有数据标签。 不适用于曲面图。
 
-      <span data-ttu-id="db575-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabel
     fullName: hasDataLabel
     langs:
@@ -64,9 +64,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPointData#markerBackgroundColor:member'
     summary: |-
-      <span data-ttu-id="db575-112">表示数据点的标记背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="db575-112">HTML color code representation of the marker background color of data point.</span></span> <span data-ttu-id="db575-113">例如，</span><span class="sxs-lookup"><span data-stu-id="db575-113">E.g.</span></span> <span data-ttu-id="db575-114">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="db575-114">\#FF0000 represents Red.</span></span>
+      数据点的标记背景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="db575-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
     fullName: markerBackgroundColor
     langs:
@@ -79,9 +79,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartPointData#markerForegroundColor:member'
     summary: |-
-      <span data-ttu-id="db575-116">表示数据点的标记前景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="db575-116">HTML color code representation of the marker foreground color of data point.</span></span> <span data-ttu-id="db575-117">例如，</span><span class="sxs-lookup"><span data-stu-id="db575-117">E.g.</span></span> <span data-ttu-id="db575-118">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="db575-118">\#FF0000 represents Red.</span></span>
+      数据点的标记前景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="db575-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
     fullName: markerForegroundColor
     langs:
@@ -94,9 +94,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartPointData#markerSize:member'
     summary: |-
-      <span data-ttu-id="db575-120">表示数据点的标记大小。</span><span class="sxs-lookup"><span data-stu-id="db575-120">Represents marker size of data point.</span></span>
+      表示数据点的标记大小。
 
-      <span data-ttu-id="db575-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
     fullName: markerSize
     langs:
@@ -109,9 +109,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPointData#markerStyle:member'
     summary: |-
-      <span data-ttu-id="db575-122">表示图表数据点的标记样式。</span><span class="sxs-lookup"><span data-stu-id="db575-122">Represents marker style of a chart data point.</span></span> <span data-ttu-id="db575-123">有关详细信息，请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="db575-123">See Excel.ChartMarkerStyle for details.</span></span>
+      表示图表数据点的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
-      <span data-ttu-id="db575-124">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
     fullName: markerStyle
     langs:
@@ -124,9 +124,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPointData#markerStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartPointData#value:member'
     summary: |-
-      <span data-ttu-id="db575-125">返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="db575-125">Returns the value of a chart point.</span></span> <span data-ttu-id="db575-126">只读。</span><span class="sxs-lookup"><span data-stu-id="db575-126">Read-only.</span></span>
+      返回图表点的值。
 
-      <span data-ttu-id="db575-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db575-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
