--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFormatData:interface'
-    summary: <span data-ttu-id="9444a-101">描述通过调用返回的数据的接口`rangeFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="9444a-101">An interface describing the data returned by calling `rangeFormat.toJSON()`</span></span><!-- --><span data-ttu-id="9444a-102">.</span><span class="sxs-lookup"><span data-stu-id="9444a-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rangeFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.RangeFormatData
     fullName: Excel.Interfaces.RangeFormatData
     langs:
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFormatData#wrapText:member'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#autoIndent:member'
     summary: |-
-      <span data-ttu-id="9444a-103">指示将文本对齐方式设为相等分布时文本是否会自动缩进。</span><span class="sxs-lookup"><span data-stu-id="9444a-103">Indicates if text is automatically indented when text alignment is set to equal distribution.</span></span>
+      指定当文本对齐方式设置为相等分布时，文本是否自动缩进。
 
-      <span data-ttu-id="9444a-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoIndent
     fullName: autoIndent
     langs:
@@ -42,9 +42,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatData#borders:member'
     summary: |-
-      <span data-ttu-id="9444a-105">应用于整个区域的 Border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9444a-105">Collection of border objects that apply to the overall range.</span></span> <span data-ttu-id="9444a-106">只读。</span><span class="sxs-lookup"><span data-stu-id="9444a-106">Read-only.</span></span>
+      应用于整个区域的 Border 对象的集合。
 
-      <span data-ttu-id="9444a-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -57,9 +57,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#borders~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#columnWidth:member'
     summary: |-
-      <span data-ttu-id="9444a-108">获取或设置区域内的所有列的宽度。</span><span class="sxs-lookup"><span data-stu-id="9444a-108">Gets or sets the width of all colums within the range.</span></span> <span data-ttu-id="9444a-109">如果列宽不统一，则返回 NULL。</span><span class="sxs-lookup"><span data-stu-id="9444a-109">If the column widths are not uniform, null will be returned.</span></span>
+      指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
 
-      <span data-ttu-id="9444a-110">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-110">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnWidth
     fullName: columnWidth
     langs:
@@ -72,9 +72,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#fill:member'
     summary: |-
-      <span data-ttu-id="9444a-111">返回在整个区域内定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="9444a-111">Returns the fill object defined on the overall range.</span></span> <span data-ttu-id="9444a-112">只读。</span><span class="sxs-lookup"><span data-stu-id="9444a-112">Read-only.</span></span>
+      返回在整个区域内定义的 fill 对象。
 
-      <span data-ttu-id="9444a-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -87,9 +87,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFillData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#font:member'
     summary: |-
-      <span data-ttu-id="9444a-114">返回在整个区域内定义的 Font 对象。</span><span class="sxs-lookup"><span data-stu-id="9444a-114">Returns the font object defined on the overall range.</span></span> <span data-ttu-id="9444a-115">只读。</span><span class="sxs-lookup"><span data-stu-id="9444a-115">Read-only.</span></span>
+      返回在整个区域内定义的 Font 对象。
 
-      <span data-ttu-id="9444a-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -102,9 +102,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFontData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="9444a-117">表示指定对象的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="9444a-117">Represents the horizontal alignment for the specified object.</span></span> <span data-ttu-id="9444a-118">有关详细信息，请参阅 HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="9444a-118">See Excel.HorizontalAlignment for details.</span></span>
+      表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
 
-      <span data-ttu-id="9444a-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -117,9 +117,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#indentLevel:member'
     summary: |-
-      <span data-ttu-id="9444a-120">0 到 250 之间的一个整数，指示缩进水平。</span><span class="sxs-lookup"><span data-stu-id="9444a-120">An integer from 0 to 250 that indicates the indent level.</span></span>
+      0 到 250 之间的一个整数，指示缩进水平。
 
-      <span data-ttu-id="9444a-121">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -132,9 +132,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#protection:member'
     summary: |-
-      <span data-ttu-id="9444a-122">返回某一区域的格式 protection 对象。</span><span class="sxs-lookup"><span data-stu-id="9444a-122">Returns the format protection object for a range.</span></span> <span data-ttu-id="9444a-123">只读。</span><span class="sxs-lookup"><span data-stu-id="9444a-123">Read-only.</span></span>
+      返回某一区域的格式 protection 对象。
 
-      <span data-ttu-id="9444a-124">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-124">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -147,9 +147,9 @@ items:
           - 'excel!Excel.Interfaces.FormatProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#readingOrder:member'
     summary: |-
-      <span data-ttu-id="9444a-125">区域的读取顺序。</span><span class="sxs-lookup"><span data-stu-id="9444a-125">The reading order for the range.</span></span>
+      区域的读取顺序。
 
-      <span data-ttu-id="9444a-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -162,9 +162,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#readingOrder~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#rowHeight:member'
     summary: |-
-      <span data-ttu-id="9444a-127">获取或设置区域中所有行的高度。</span><span class="sxs-lookup"><span data-stu-id="9444a-127">Gets or sets the height of all rows in the range.</span></span> <span data-ttu-id="9444a-128">如果行高不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="9444a-128">If the row heights are not uniform, null will be returned.</span></span>
+      区域中所有行的高度。 如果行高不一致，则将返回 null。
 
-      <span data-ttu-id="9444a-129">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-129">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHeight
     fullName: rowHeight
     langs:
@@ -177,9 +177,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#shrinkToFit:member'
     summary: |-
-      <span data-ttu-id="9444a-130">指示文本是否自动缩小以适合可用列宽。</span><span class="sxs-lookup"><span data-stu-id="9444a-130">Indicates if text automatically shrinks to fit in the available column width.</span></span>
+      指定文本是否自动收缩以显示可用列宽。
 
-      <span data-ttu-id="9444a-131">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-131">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -192,9 +192,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatData#textOrientation:member'
     summary: |-
-      <span data-ttu-id="9444a-132">获取或设置区域内的所有单元格的文本方向。</span><span class="sxs-lookup"><span data-stu-id="9444a-132">Gets or sets the text orientation of all the cells within the range.</span></span> <span data-ttu-id="9444a-133">文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。</span><span class="sxs-lookup"><span data-stu-id="9444a-133">The text orientation should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span> <span data-ttu-id="9444a-134">如果区域中的方向不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="9444a-134">If the orientation within a range are not uniform, then null will be returned.</span></span>
+      区域中所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
 
-      <span data-ttu-id="9444a-135">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-135">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -207,9 +207,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#useStandardHeight:member'
     summary: |-
-      <span data-ttu-id="9444a-136">确定 Range 对象的行高是否等于工作表的标准行高。</span><span class="sxs-lookup"><span data-stu-id="9444a-136">Determines if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="9444a-137">如果 Range 对象的行高等于工作表的标准高度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="9444a-137">Returns True if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="9444a-138">如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="9444a-138">Returns Null if the range contains more than one row and the rows aren't all the same height.</span></span> <span data-ttu-id="9444a-139">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="9444a-139">Returns False otherwise.</span></span>
+      确定 Range 对象的行高是否等于工作表的标准行高。 如果 Range 对象的行高等于工作表的标准高度，则返回 True。 如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="9444a-140">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-140">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardHeight
     fullName: useStandardHeight
     langs:
@@ -222,9 +222,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatData#useStandardWidth:member'
     summary: |-
-      <span data-ttu-id="9444a-141">指示 Range 对象的列宽是否等于工作表的标准宽度。</span><span class="sxs-lookup"><span data-stu-id="9444a-141">Indicates whether the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="9444a-142">如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="9444a-142">Returns True if the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="9444a-143">如果区域中包含多个列，并且各列的高度不相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="9444a-143">Returns Null if the range contains more than one column and the columns aren't all the same height.</span></span> <span data-ttu-id="9444a-144">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="9444a-144">Returns False otherwise.</span></span>
+      指定 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="9444a-145">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-145">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
     fullName: useStandardWidth
     langs:
@@ -237,9 +237,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="9444a-146">表示指定对象的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="9444a-146">Represents the vertical alignment for the specified object.</span></span> <span data-ttu-id="9444a-147">有关详细信息，请参阅 VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="9444a-147">See Excel.VerticalAlignment for details.</span></span>
+      表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
-      <span data-ttu-id="9444a-148">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-148">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -252,9 +252,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#wrapText:member'
     summary: |-
-      <span data-ttu-id="9444a-149">指示 Excel 是否将对象中的文本换行。</span><span class="sxs-lookup"><span data-stu-id="9444a-149">Indicates if Excel wraps the text in the object.</span></span> <span data-ttu-id="9444a-150">指示整个区域不具有统一换行设置的空值</span><span class="sxs-lookup"><span data-stu-id="9444a-150">A null value indicates that the entire range doesn't have uniform wrap setting</span></span>
+      指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
 
-      <span data-ttu-id="9444a-151">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9444a-151">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
