--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetcustompropertyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetcustompropertyloadoptions.yml
@@ -31,7 +31,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyLoadOptions#key:member'
     summary: |-
-      获取 customProperty 的键。 只读。
+      获取 customProperty 的键。 自定义属性键不区分大小写。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -47,7 +47,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyLoadOptions#value:member'
     summary: |-
-      获取自定义属性的值。 只读。
+      获取或设置自定义属性的值。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
