--- a/docs/docs-ref-autogen/word_1_2/word.yml
+++ b/docs/docs-ref-autogen/word_1_2/word.yml
@@ -161,7 +161,7 @@ items:
         - id: object
           description: 以前创建的 API 对象。 批处理将使用与传入的对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由 "context" （）来选取。
           type:
-            - 'word!OfficeExtension.ClientObject:class'
+            - 'office!OfficeExtension.ClientObject:class'
         - id: batch
           description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。
           type:
@@ -412,7 +412,7 @@ references:
     name: 'OfficeExtension.ClientObject[]'
     fullName: 'OfficeExtension.ClientObject[]'
     spec.typeScript:
-      - uid: 'word!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: '[]'
@@ -442,7 +442,7 @@ references:
         fullName: Promise
       - name: <T>
         fullName: <T>
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.run~4:complex'
     name: '(context: Word.RequestContext) => Promise<T>'
