--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.workbookdata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.workbookdata.yml
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
   - uid: 'excel!Excel.Interfaces.WorkbookData#bindings:member'
     summary: |-
-      表示属于工作簿的绑定的集合。 只读。
+      表示属于工作簿的绑定的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
@@ -32,7 +32,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#bindings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#names:member'
     summary: |-
-      表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
+      表示工作簿范围内的已命名项目（称为区域和常量）的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -47,7 +47,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#names~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#pivotTables:member'
     summary: |-
-      表示一组与 workbook 相关联的 PivotTable 对象。 只读。
+      表示一组与 workbook 相关联的 PivotTable 对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -62,7 +62,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#pivotTables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#settings:member'
     summary: |-
-      表示一组与 workbook 相关联的 setting 对象。 只读。
+      表示一组与 workbook 相关联的 setting 对象。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
@@ -77,7 +77,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#settings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#tables:member'
     summary: |-
-      表示与工作簿关联的表的集合。 只读。
+      表示与工作簿关联的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
@@ -92,7 +92,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#tables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
     summary: |-
-      表示与工作簿关联的工作表的集合。 只读。
+      表示与工作簿关联的工作表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
