--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartseriesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartseriesdata.yml
@@ -14,7 +14,7 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesData#points:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#format:member'
     summary: |-
-      表示图表系列的格式，包括填充和线条格式。 只读。
+      表示图表系列的格式，包括填充和线条格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -29,7 +29,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#name:member'
     summary: |-
-      表示图表中某个系列的名称。
+      指定图表中系列的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -44,7 +44,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#points:member'
     summary: |-
-      表示系列中所有数据点的集合。 只读。
+      返回系列中所有数据点的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: points
